# gmo-ws-trade

./: .gitignore  Makefile  example_env  pyproject.toml  sample.ipynb  test.py  test_gmo_server.py  test_trade.py
backtest/: main.ipynb  main.py
backtest/backtest_trade/: backtest.py  richman_backtest.py
backtest/local_ohlc_analize/: download_klines.sh  loader.py  local_analization.ipynb
backtest/utils/: utils.py
backtest/visualize/: backtest_visualize.py  ohlcv.py
gmo-websocket/: connect.py
gmo-websocket/db/: crud.py  schemas.py
gmo-websocket/utils/: custom_exceptions.py
gmo_hft_bot/: connect.py  main.py  processes.py  queue_and_trade_manager.py  queue_and_trade_threads.py  websocket_threads.py
gmo_hft_bot/db/: crud.py  database.py  models.py  schemas.py
gmo_hft_bot/threads/: connect_orderbook_ws.py  connect_tick_ws.py  manage_orderbook_queue.py  manage_tick_queue.py  queue_and_trade_threads.py  trade.py  websocket_threads.py
gmo_hft_bot/utils/: custom_queue.py  gmo_websocket_subscriber.py  logger_utils.py  queue_and_trade_manager.py
gmo_websocket/: connect.py  gmo_ws.py  queue_and_trade_thread.py  queue_and_trade_threads.py  websocket_threads.py  websockets_thread.py
gmo_websocket/db/: crud.py  database.py  models.py
gmo_websocket/utils/: custom_queue.py  logger_utils.py
tests/: schemas.py  test_crud_board.py  test_crud_ohlcv.py  test_crud_tick.py  test_queue_and_trade_manager.py  test_queue_and_trade_threads.py  utils.py
tests/db/: test_crud_board.py  test_crud_ohlcv.py  test_crud_tick.py
tests/threads/: test_connect_orderbook_ws.py  (+3 more)
(+4 files in other folders)
